制約を文字列表現にした。