@@ -3,10 +3,15 @@ package puzzle.csp;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class CspInt {
@@ -14,76 +19,50 @@ public class CspInt {
     public static class Problem {
         private final List<Variable> pVariables = new ArrayList<>();
         private final List<Constraint> pConstraints = new ArrayList<>();
+        private final Map<String, Variable> pNameVariables = new HashMap<>();
         public final List<Variable> variables = Collections.unmodifiableList(pVariables);
         public final List<Constraint> constraints = Collections.unmodifiableList(pConstraints);
+        Pattern variableNames = null;
 
         public Variable variable(String name, Domain domain) {
-            if (pVariables.stream().anyMatch(v -> v.name.equals(name)))
+            if (pNameVariables.containsKey(name))
                 throw new IllegalArgumentException("variable '" + name + "' duplicate");
+            if (variableNames != null)
+                throw new IllegalStateException("cannot define variable");
             Variable v = new Variable(name, domain);
             pVariables.add(v);
+            pNameVariables.put(name, v);
             return v;
         }
+        
+        public Variable variable(String name) {
+            return pNameVariables.get(name);
+        }
 
-        public Constraint constraint0(IntsPredicate predicate, Variable... variables) {
+        public Pattern variableNames() {
+            if (variableNames != null)
+                return variableNames;
+            return variableNames = Pattern.compile(
+                "\\b("
+                + pVariables.stream().map(v -> v.name).collect(Collectors.joining("|"))
+                + ")\\b");
+        }
+
+        public List<Variable> variables(String predicate) {
+            List<Variable> variables = new ArrayList<>();
+            Matcher m = variableNames().matcher(predicate);
+            while (m.find())
+                variables.add(variable(m.group()));
+            return variables;
+        }
+
+        public Constraint constraint(String predicate) {
+            List<Variable> variables = variables(predicate);
             Constraint c = new Constraint(predicate, variables);
             pConstraints.add(c);
             for (Variable v : variables)
                 v.pConstraints.add(c);
             return c;
-        }
-
-        public Constraint constraint(IntsPredicate1 predicate, Variable a) {
-            return constraint0(predicate, a);
-        }
-
-        public Constraint constraint(IntsPredicate2 predicate, Variable a, Variable b) {
-            return constraint0(predicate, a, b);
-        }
-
-        public Constraint constraint(IntsPredicate3 predicate, Variable a, Variable b, Variable c) {
-            return constraint0(predicate, a, b, c);
-        }
-
-        public Constraint constraint(IntsPredicate4 predicate, Variable a, Variable b, Variable c,
-            Variable d) {
-            return constraint0(predicate, a, b, c, d);
-        }
-
-        public Constraint constraint(IntsPredicate5 predicate, Variable a, Variable b, Variable c,
-            Variable d, Variable e) {
-            return constraint0(predicate, a, b, c, d, e);
-        }
-
-        public Constraint constraint(IntsPredicate6 predicate, Variable a, Variable b, Variable c,
-            Variable d, Variable e, Variable f) {
-            return constraint0(predicate, a, b, c, d, e, f);
-        }
-
-        public Constraint constraint(IntsPredicate7 predicate, Variable a, Variable b, Variable c,
-            Variable d, Variable e, Variable f, Variable g) {
-            return constraint0(predicate, a, b, c, d, e, f, g);
-        }
-
-        public Constraint constraint(IntsPredicate8 predicate, Variable a, Variable b, Variable c,
-            Variable d, Variable e, Variable f, Variable g, Variable h) {
-            return constraint0(predicate, a, b, c, d, e, f, g, h);
-        }
-
-        public Constraint constraint(IntsPredicate9 predicate, Variable a, Variable b, Variable c,
-            Variable d, Variable e, Variable f, Variable g, Variable h, Variable i) {
-            return constraint0(predicate, a, b, c, d, e, f, g, h, i);
-        }
-
-        public Constraint constraint(IntsPredicate10 predicate, Variable a, Variable b, Variable c,
-            Variable d, Variable e, Variable f, Variable g, Variable h, Variable i, Variable j) {
-            return constraint0(predicate, a, b, c, d, e, f, g, h, i, j);
-        }
-
-        public void allDifferent(Variable... variables) {
-            for (int i = 0, max = variables.length; i < max; ++i)
-                for (int j = i + 1; j < max; ++j)
-                    constraint((a, b) -> a != b, variables[i], variables[j]);
         }
     }
 
@@ -138,105 +117,22 @@ public class CspInt {
         }
     }
 
-    public interface IntsPredicate {
-        boolean test(int... a);
-    }
-
-    public interface IntsPredicate1 extends IntsPredicate {
-        default boolean test(int... a) {
-            return test0(a[0]);
-        }
-
-        boolean test0(int a);
-    }
-
-    public interface IntsPredicate2 extends IntsPredicate {
-        default boolean test(int... a) {
-            return test0(a[0], a[1]);
-        }
-
-        boolean test0(int a, int b);
-    }
-
-    public interface IntsPredicate3 extends IntsPredicate {
-        default boolean test(int... a) {
-            return test0(a[0], a[1], a[2]);
-        }
-
-        boolean test0(int a, int b, int c);
-    }
-
-    public interface IntsPredicate4 extends IntsPredicate {
-        default boolean test(int... a) {
-            return test0(a[0], a[1], a[2], a[3]);
-        }
-
-        boolean test0(int a, int b, int c, int d);
-    }
-
-    public interface IntsPredicate5 extends IntsPredicate {
-        default boolean test(int... a) {
-            return test0(a[0], a[1], a[2], a[3], a[4]);
-        }
-
-        boolean test0(int a, int b, int c, int d, int e);
-    }
-
-    public interface IntsPredicate6 extends IntsPredicate {
-        default boolean test(int... a) {
-            return test0(a[0], a[1], a[2], a[3], a[4], a[5]);
-        }
-
-        boolean test0(int a, int b, int c, int d, int e, int f);
-    }
-
-    public interface IntsPredicate7 extends IntsPredicate {
-        default boolean test(int... a) {
-            return test0(a[0], a[1], a[2], a[3], a[4], a[5], a[6]);
-        }
-
-        boolean test0(int a, int b, int c, int d, int e, int f, int g);
-    }
-
-    public interface IntsPredicate8 extends IntsPredicate {
-        default boolean test(int... a) {
-            return test0(a[0], a[1], a[2], a[3], a[4], a[5], a[6], a[7]);
-        }
-
-        boolean test0(int a, int b, int c, int d, int e, int f, int g, int h);
-    }
-
-    public interface IntsPredicate9 extends IntsPredicate {
-        default boolean test(int... a) {
-            return test0(a[0], a[1], a[2], a[3], a[4], a[5], a[6], a[7], a[8]);
-        }
-
-        boolean test0(int a, int b, int c, int d, int e, int f, int g, int h, int i);
-    }
-
-    public interface IntsPredicate10 extends IntsPredicate {
-        default boolean test(int... a) {
-            return test0(a[0], a[1], a[2], a[3], a[4], a[5], a[6], a[7], a[8], a[9]);
-        }
-
-        boolean test0(int a, int b, int c, int d, int e, int f, int g, int h, int i, int j);
-    }
-
     public static class Constraint {
-        public final IntsPredicate predicate;
+        public final String predicate;
         public final List<Variable> variables;
 
-        Constraint(IntsPredicate predicate, Variable... variables) {
+        Constraint(String predicate, List<Variable> variables) {
             Objects.requireNonNull(predicate, "predicate");
-            if (variables.length == 0)
-                throw new IllegalArgumentException("empty variables");
+            if (variables.size() == 0)
+                throw new IllegalArgumentException("require at least one variable");
             this.predicate = predicate;
-            this.variables = List.of(variables);
+            this.variables = Collections.unmodifiableList(variables);
         }
 
         @Override
         public String toString() {
-            return "constraint" + variables;
+            return predicate;
+//            return "constraint:" + predicate + variables;
         }
     }
 
